Fixed overflow bug on SplitLayout

--- a/horarios-plus-plus/src/Layouts/Split/SplitLayout.css
+++ b/horarios-plus-plus/src/Layouts/Split/SplitLayout.css
@@ -16,6 +16,7 @@
   flex-flow: row nowrap;
 
   flex-grow: 1;
+  overflow-y: scroll;
 }
 
 .split-wrapped > div:nth-child(1) {
@@ -30,4 +31,6 @@
   border-radius: 2rem;
   padding: 1.5rem;
   margin: 1.25rem;
+
+  overflow: hidden;
 }
